<resources>
  <string name="app_name">Rilabs</string>
  <string name="tesimageview">TesImageView</string>
  <string name="home_page">Home Page</string>
  <string name="username">Ari Supriatna</string>
  <string name="forum">Hacktiv8 Indonesia</string>
  <string name="add_to_group">Add to group</string>
  <string name="phone_number">+6285777282844</string>
  <string name="my_email">arisupriatna703@gmail.com</string>
  <string name="photos">Photos</string>
  <string name="count_photos">125</string>
  <string name="followers">Followers</string>
  <string name="count_followers">125K</string>
  <string name="following">Following</string>
  <string name="count_following">125</string>
  <string name="follow_me">Follow Me</string>
  <string name="photo_profile">photo_profile</string>
</resources>
