<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="@color/grayLight"
  android:orientation="vertical"
  tools:context=".ProfileActivity">
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="405dp">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="350dp"
      android:background="@drawable/gradient_background"
      android:orientation="vertical">
      <ImageView
        android:layout_marginTop="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon_user"
        android:contentDescription="@string/photo_profile"
      />
      <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="21sp"/>
    </LinearLayout>
    <android.support.v7.widget.CardView
      android:layout_width="360dp"
      android:layout_height="120dp"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="275dp"
      app:cardCornerRadius="5dp">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:baselineAligned="false">
        <LinearLayout
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:gravity="center">
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos"
            android:textSize="20sp"/>
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_photos"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:textColor="@color/startBlue"/>
        </LinearLayout>
        <LinearLayout
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="match_parent"
          android:gravity="center"
          android:orientation="vertical">
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textSize="18sp"/>
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_followers"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:textColor="@color/startBlue"/>
        </LinearLayout>
        <LinearLayout
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="match_parent"
          android:gravity="center"
          android:orientation="vertical">
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="18sp"/>
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_following"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:textColor="@color/startBlue"/>
        </LinearLayout>
      </LinearLayout>
    </android.support.v7.widget.CardView>
  </RelativeLayout>
  <LinearLayout
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginStart="25dp"
    android:layout_marginTop="35dp">
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp">
      <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_email_black_24dp"/>
      <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/my_email"
        android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp">
      <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_phone_android_black_24dp"/>
      <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/phone_number"
        android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp">
      <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_group_add_black_24dp"/>
      <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/add_to_group"
        android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp">
      <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_forum_black_24dp"/>
      <TextView
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/forum"
        android:textSize="16sp"/>
    </LinearLayout>
  </LinearLayout>
  <Button
    android:id="@+id/btn_follow"
    android:background="@drawable/button_style"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/follow_me"
    android:textColor="@color/white"/>
</LinearLayout>